--- a/content/resources/css/player-stats.css
+++ b/content/resources/css/player-stats.css
@@ -1,7 +1,95 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-.ft-playerStats-walkover {
+.slider {
+	position: relative;
+	height: 4px;
+	background: #eee;
+	border: 1px solid #aaa;
+}
+.slider .handle {
+	position: absolute;
+	cursor: pointer;
+}
+
+.slider .foxtrick-bar {
+	display:table-cell;
+	width: 7px;
+	height: 10px;
+	background: #ccc;
+	color: #FFF;
+	line-height: 10px;
+	text-align: center;
+	margin-top: -6px;
+	padding-top: 4px;
+	border: 1px solid #aaa;
+}
+
+.slider .disabled {
+	background: #898989;
+}
+
+.rounded-cornered {
+border-radius: 3px;
+-moz-border-radius: 3px;
+-webkit-border-radius: 3px;
+}
+
+.ft-xp-walkover {
 	text-decoration: line-through;
 	background-color: #ffabab;
+}
+
+.ft-xp-incomplete {
+	background-color: #ffabab;
+}
+.ft-xp-complete {
+	background-color: #abffab;
+}
+.ft-xp-skillup {
+	background-color: #feffab !important;
+}
+
+.ft-xp-data-value {
+	text-align:right;
+}
+
+#ft-xp-matchInternationalFriendly-desc,
+#ft-xp-matchNationalFriendly-desc {
+	padding-left: 10px !important;
+}
+html[dir="rtl"] #ft-xp-matchInternationalFriendly-desc,
+html[dir="rtl"] #ft-xp-matchNationalFriendly-desc {
+	padding-right: 10px !important;
+}
+
+#ft-xp-min-pts,
+#ft-xp-max-pts {
+	border-top: 1px solid #000;
+}
+#ft-xp-min,
+#ft-xp-max {
+	
+}
+
+.ft-desc {
+	min-width: 200px;
+}
+
+.ft-slider-cell {
+	display:table-cell;
+	width:100%
+}
+
+.ft-table-cell {
+	display:table-cell;
+}
+
+#ft-xp-percentage-value {
+	min-width: 70px;
+	text-align: right;
+}
+
+.ft-slider-option {
+	padding-top: 20px;
 }
 }
