--- a/content/resources/css/match-order.css
+++ b/content/resources/css/match-order.css
@@ -1,29 +1,5 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-/* played last highlighting */
-html[dir="rtl"] #list .playedLast {
-	border-left : 4px solid #48f;
-	padding: 3px 2px 3px 25px !important;
-}
-html[dir="ltr"] #list .playedLast {
-	border-right : 4px solid #48f;
-	padding: 3px 25px 3px 2px !important;
-}
-html[dir="rtl"] #list .playedOther, html[dir="rtl"]  #list .playedSecondLast {
-	border-left : 4px solid transparent !important;
-	padding: 3px 2px 3px 9px !important;
-}
-html[dir="ltr"] #list .playedOther, html[dir="ltr"]  #list .playedSecondLast {
-	border-right : 4px solid transparent;
-	padding: 3px 9px 3px 2px !important;
-}
-#list .playedLast.ui-draggable-dragging , 
-#list .playedSecondLast.ui-draggable-dragging, 
-#list .playedOther.ui-draggable-dragging {
-	padding: 0px !important;
-	border : 0px;
-}
-
 #ft_swap_positions {
 	background-color: #3f7137; 
 	float: left; 
@@ -61,14 +37,8 @@ html[dir="ltr"] #order_tabs {
 	right: 1px !important;
 }
 
-#orders .position > .player.playedLast, #list .playedLast.ui-draggable-dragging {
-	border: 2px solid #48f !important;
-}
-
-#orders .position > .player.field-playedSecondLast {
-}
-
-#orders .position > .player.field-playedOther {
+#orders .position > .player.ft-highlight-onfield, #list .ft-highlight-onfield.ui-draggable-dragging {
+	border: 2px solid #3FD6FC !important;
 }
 
 #list .shirt {
