--- a/content/resources/css/match-order-clone.css
+++ b/content/resources/css/match-order-clone.css
@@ -1,9 +1,5 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
-
-html[dir="ltr"] .ft-match-order-clone-1 {
-	right:20px;
-	top: -16px;
-	background: #48f;
+.ft-match-order-clone-button {
 	border: 2px solid black;
 	border-radius: 7px;
 	-moz-border-radius: 7px;
@@ -13,85 +9,35 @@ html[dir="ltr"] .ft-match-order-clone-1 {
 	font-weight: 900;
 	font-size: 0.8em;
 	cursor: pointer;
-	padding: 3px 5px;
+	padding: 3px 5px;	
+	background: #48f;
+}
+html[dir="ltr"] .ft-match-order-clone-1 {
+	right:20px;
+	top: -16px;
 }
 html[dir="ltr"]  .ft-match-order-clone-2 {
 	right:49px;
 	top: -16px;
-	background: #48f;
-	border: 2px solid black;
-	border-radius: 7px;
-	-moz-border-radius: 7px;
-	-webkit-border-radius: 7px;
-	color: white;
-	position: absolute;
-	font-weight: 900;
-	font-size: 0.8em;
-	cursor: pointer;
-	padding: 3px 5px;
 }
 html[dir="ltr"] .ft-match-order-clone-3 {
 	right:78px;
 	top: -16px;
-	background: #48f;
-	border: 2px solid black;
-	border-radius: 7px;
-	-moz-border-radius: 7px;
-	-webkit-border-radius: 7px;
-	color: white;
-	position: absolute;
-	font-weight: 900;
-	font-size: 0.8em;
-	cursor: pointer;
-	padding: 3px 5px;
 }
 html[dir="rtl"] .ft-match-order-clone-1 {
 	left:20px;
 	right:auto;
 	top: -16px;
-	background: #48f;
-	border: 2px solid black;
-	border-radius: 7px;
-	-moz-border-radius: 7px;
-	-webkit-border-radius: 7px;
-	color: white;
-	position: absolute;
-	font-weight: 900;
-	font-size: 0.8em;
-	cursor: pointer;
-	padding: 3px 5px;
 }
 html[dir="rtl"] .ft-match-order-clone-2 {
 	left:49px;
 	right:auto;
 	top: -16px;
-	background: #48f;
-	border: 2px solid black;
-	border-radius: 7px;
-	-moz-border-radius: 7px;
-	-webkit-border-radius: 7px;
-	color: white;
-	position: absolute;
-	font-weight: 900;
-	font-size: 0.8em;
-	cursor: pointer;
-	padding: 3px 5px;
 }
 html[dir="rtl"] .ft-match-order-clone-3 {
-	left:79px;
+	left:78px;
 	right:auto;
 	top: -16px;
-	background: #48f;
-	border: 2px solid black;
-	border-radius: 7px;
-	-moz-border-radius: 7px;
-	-webkit-border-radius: 7px;
-	color: white;
-	position: absolute;
-	font-weight: 900;
-	font-size: 0.8em;
-	cursor: pointer;
-	padding: 3px 5px;
 }
 
 }
